# safebook

./: CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  main.cpp  scraps.txt  scraps2.txt  scraps3.txt
.cache/clangd/index/: crackEngine.cpp.E5E2BBC77BD10BA0.idx  crackEngine.h.76C284F4B81876AA.idx  hashEngine.cpp.B8862F786B53DB36.idx  hashManager.cpp.3BC149F00E04E7C1.idx  hashManager.h.A4CBFEDF4FDCD890.idx  main.cpp.B9047CD030FF5782.idx  safebook.cpp.07837D658ECFE56E.idx  userManager.cpp.E34A188FE4F93C42.idx  userManager.h.69AA761E3AAC5919.idx  widget.cpp.96B6271A0D41A032.idx  widget.h.88B04DAF543B6247.idx
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-debug-msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  safebook.ilk
build-debug-msvc/.cmake/api/v1/reply/: cache-v2-0694e85c8934eba8a704.json  cache-v2-19c8eabdec16f1efe5d1.json  cache-v2-1cedfb932c9099b1ec27.json  cmakeFiles-v1-30c5d75316d5afb751fd.json  cmakeFiles-v1-c337ea93d8a650f33a99.json  cmakeFiles-v1-cf2d5fb4bfdc778d215e.json  codemodel-v2-59bb0961062d6c712485.json  codemodel-v2-8f5dfef674603dfe414e.json  (+11 more)
build-debug-msvc/.qt/: QtDeploySupport.cmake
build-debug-msvc/safebook_autogen/: deps
build-debug/.cache/clangd/index/: main.moc.33D10BD8BFCA7BF6.idx
build-debug/.qt/: QtDeploySupport.cmake
build-debug/safebook_autogen/: deps
build-debug/safebook_autogen/include/: main.moc  main.moc.d
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake
build-release/safebook_autogen/: deps
build-release/safebook_autogen/include/: main.moc  main.moc.d
include/: crackEngine.h  hashManager.h  userManager.h
resources/: users.txt
src/: crackEngine.cpp  hashManager.cpp  safebook.cpp  userManager.cpp
(+22 files in other folders)
